Z-index fixes for floating button in mobile

--- a/src/containers/CompanyPage/CompanyPage.module.css
+++ b/src/containers/CompanyPage/CompanyPage.module.css
@@ -739,7 +739,7 @@
 
 
 .contactCardCompany {
- 
+  z-index: 1;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -747,7 +747,6 @@
   margin-bottom: 0px;
   padding: 0px 24px 18px 24px;
   background-color: var(--matterColorLight);
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.025);
   display: flex; 
   flex-direction: column;
   justify-content: center;
