--- a/src/containers/ListingPage/ListingPage.module.css
+++ b/src/containers/ListingPage/ListingPage.module.css
@@ -697,6 +697,7 @@
 
 
 .contactCardCompany {  
+  z-index: 1;
   position: fixed;
   bottom: 0;
   left: 0;
